--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "next": "13.4.12",
+    "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.13.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
